# sysflake

./: .gitignore  README.md  USAGE.md  flake.nix  pyproject.toml
docs/: ALTAIR_TOOLS.md  PRINTING_SETUP.md
flake/: default.nix  home-manager.nix  nixos.nix  nvim.nix  overlays.nix  pkgs-by-name.nix
flake/apps/: default.nix
flake/dev/: default.nix  flake.nix
flake/nim/: mkNeovim.nix
flake/nvim/: mkNeovim.nix  neovim-overlay.nix
flake/nvim/src/: init.lua
flake/nvim/src/plugin/: autocommands.lua  completion.lua  eyeliner.lua  gitsigns.lua  keymaps.lua  lualine.lua  neogit.lua  telescope.lua  treesitter.lua
hosts/altair/: default.nix  hardware.nix  home.nix
hosts/proxima/: home.nix
hosts/vega/: default.nix  home.nix
lib/: default.nix
manifests/: altair.toml  proxima.toml  registry-schema.toml  schema.toml
modules/home/: default.nix
modules/home/profiles/: base.nix  dev.nix  gui.nix
modules/home/programs/: direnv.nix  git.nix  neovim.nix  zsh.nix
modules/nixos/: base.nix
monitoring/: README.md  podman-compose.yml
monitoring/collector/: server.py
monitoring/prometheus/: prometheus.yml
pkgs/: .gitkeep
private/: .gitkeep
scripts/: bootstrap.sh  gpg-setup.sh  manifest.py  registry.py  ssh-setup.sh  sync.sh
