[project]
name = "syscfg"
version = "0.1.0"
description = "Multi-machine configuration management scripts"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
registry = "scripts.registry:main"
manifest = "scripts.manifest:main"

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
]
